close btn spacing fix

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -94,7 +94,7 @@ button {
     /* top: 10; */
     /* right: 100px; */
     overflow: hidden;
-    /* margin-left: 350px; */
+    margin-left: 500px;
     
     color: rgb(143, 237, 100);
     padding-bottom: 5px;
