--- a/src/components/ModalContact/ModalContact.module.css
+++ b/src/components/ModalContact/ModalContact.module.css
@@ -56,13 +56,14 @@
 
 .nameLabel {
     color: #ffffff;
-    display: block;
+    /* display: block; */
     font-size: 0.8rem;
     font-weight: 300;
     letter-spacing: 0.2rem;
     line-height: 1.5;
     margin: 0 0 1rem 0;
     text-transform: uppercase;
+    padding-left: 15px;
 
     padding-right: 0;
 
@@ -102,6 +103,8 @@
     line-height: 1.5;
     /* margin: 0 0 1rem 0; */
     text-transform: uppercase;
+
+    padding-left: 15px;
 }
 .inputEmail {
     display: block;
@@ -131,6 +134,7 @@
     /* line-height: 1.5; */
     margin: 0 0 1rem 0;
     text-transform: uppercase;
+    padding-left: 15px;
 }
 
 .textAreaLabel {
@@ -184,6 +188,7 @@
     white-space: nowrap;
 
     width: 50%;
+    margin-left: 15px;
 
 }
 
@@ -205,6 +210,7 @@
     border-radius: 4px;
 
     width: 50%;
+    margin-left: 15px;
 
 }
 
